# pragma-opensource

./: .gitignore  README.md  config.yaml  environment.yml  pyproject.toml  tasks.md
pragma_repro/: __init__.py  bpe.py  config.py  lora.py  masking.py  model.py  records.py  tokenizer.py
research/: README.md  pragma_overview.md
scripts/: benchmark.py  build_store.py  finetune_synthetic.py  infer.py  pretrain_synthetic.py  probe.py  smoke_test.py  train.py
src/: config.py  runtime.py
src/data/: __init__.py  io.py  masking.py  mbd.py  shards.py  synthetic.py  text_encoder.py  tokenizer.py
src/modeling/: __init__.py  backbone.py  optim.py  varlen.py
src/tasks/: __init__.py  metrics.py  probe.py  supervision.py
src/tests/: integration_test.py  mbd_loader_test.py  smoke_test.py
