[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pragma-repro"
version = "0.1.0"
description = "Paper-faithful PRAGMA-style transaction foundation model reproduction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["torch>=2.5"]

[tool.setuptools.packages.find]
include = ["pragma_repro*"]

