[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pragma-repro"
version = "0.1.0"
description = "Paper-faithful PRAGMA-style transaction foundation model reproduction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "pyyaml>=6.0", "torch>=2.5"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["data*", "modeling*"]
